--- a/bespin_k8s_gcloud_cluster/tasks/create_cluster.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/create_cluster.yml
@@ -6,6 +6,6 @@
       environment:
         K8S_AUTH_API_KEY: "{{ gcloud_k8s_token }}"
         K8S_AUTH_HOST: "{{ gcloud_k8s_host }}"
-        K8S_AUTH_VERIFY_SSL: "{{ gcloud_k8s_verify_ssl }}"
+        K8S_AUTH_SSL_CA_CERT  : "{{ gcloud_k8s_ca_path }}"
 - include: tasks/create_file_storage.yml
 - include: tasks/update_bespin_api_connection.yml
