--- a/bespin_k8s_gcloud_cluster/tasks/get-service-account-credentials.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/get-service-account-credentials.yml
@@ -18,12 +18,31 @@
 - set_fact:
     gcloud_k8s_token: "{{ service_account_secret_details['data']['token'] | b64decode }}"
 
-- set_fact:
-    gcloud_k8s_verify_ssl: no
-
 - name: Fetch details about cluster so we can determine the hostname
   command: kubectl get endpoints kubernetes --output=jsonpath={.subsets[0].addresses[0].ip}
   register: kubectl_endpoints_info
 
 - set_fact:
     gcloud_k8s_host: "https://{{ kubectl_endpoints_info['stdout'] }}"
+
+- name: Get name of the current context
+  command: kubectl config current-context
+  register: kubectl_current_context
+
+- name: Get cluster certificate authority-data
+  command: >
+    kubectl config view --raw -o
+    "jsonpath='{.clusters[?(@.name == \"{{ kubectl_current_context.stdout }}\")].cluster.certificate-authority-data}'"
+  register: kubectl_current_context
+
+- name: create temp file to hold certificate authority data
+  tempfile:
+    state: file
+    suffix: ca
+  register: temp_ca_file
+
+- set_fact:
+    gcloud_k8s_ca_path: "{{ temp_ca_file.path }}"
+
+- name: "Write certificate authority data to temp file: gcloud_k8s_ca_path"
+  copy: content="{{ kubectl_current_context.stdout | b64decode }}" dest="{{ gcloud_k8s_ca_path }}"
