--- a/bespin_k8s_gcloud_cluster/tasks/get-service-account-credentials.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/get-service-account-credentials.yml
@@ -25,11 +25,11 @@
 - set_fact:
     gcloud_k8s_host: "https://{{ kubectl_endpoints_info['stdout'] }}"
 
-- name: Get name of the current context
+- name: Get name of the current kubectl context
   command: kubectl config current-context
   register: kubectl_current_context
 
-- name: Get cluster certificate authority-data
+- name: Get cluster certificate authority data
   command: >
     kubectl config view --raw -o
     "jsonpath='{.clusters[?(@.name == \"{{ kubectl_current_context.stdout }}\")].cluster.certificate-authority-data}'"
@@ -46,3 +46,9 @@
 
 - name: "Write certificate authority data to temp file: gcloud_k8s_ca_path"
   copy: content="{{ kubectl_current_context.stdout | b64decode }}" dest="{{ gcloud_k8s_ca_path }}"
+
+- set_fact:
+    gcloud_k8s_env:
+        K8S_AUTH_API_KEY: "{{ gcloud_k8s_token }}"
+        K8S_AUTH_HOST: "{{ gcloud_k8s_host }}"
+        K8S_AUTH_SSL_CA_CERT  : "{{ gcloud_k8s_ca_path }}"
