--- a/bespin_k8s_gcloud_cluster/tasks/delete_cluster.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/delete_cluster.yml
@@ -4,10 +4,8 @@
 - include_role:
     name: bespin_k8s_namespace
     apply:
-      environment:
-        K8S_AUTH_API_KEY: "{{ gcloud_k8s_token }}"
-        K8S_AUTH_HOST: "{{ gcloud_k8s_host }}"
-        K8S_AUTH_VERIFY_SSL: "{{ gcloud_k8s_verify_ssl }}"
+      environment: "{{ gcloud_k8s_env }}"
   when: cluster_exists
 - include: tasks/delete_file_storage.yml
+  environment: "{{ gcloud_k8s_env }}"
 - include: tasks/delete_k8s_cluster.yml
