use kubeconfig env vars to setup k8s module
Simplifies logic to authenticate with k8s via the k8s ansible
module by create a tempoary kubeconfig file. This requires running
kubectl once to populate access-token in kubeconfig file.

--- a/bespin_k8s_gcloud_cluster/tasks/create_cluster.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/create_cluster.yml
@@ -1,9 +1,9 @@
 - include: tasks/create_k8s_cluster.yml
-- include: tasks/get-service-account-credentials.yml
+- include: tasks/get-kubeconfig-credentials.yml
 - include_role:
     name: bespin_k8s_namespace
     apply:
-      environment: "{{ gcloud_k8s_env }}"
+      environment: "{{ k8s_auth_env }}"
 - include: tasks/create_file_storage.yml
-  environment: "{{ gcloud_k8s_env }}"
+  environment: "{{ k8s_auth_env }}"
 - include: tasks/update_bespin_api_connection.yml
