replace outdated variable with current one

--- a/bespin_k8s_namespace/tasks/stage_system_data.yml
+++ b/bespin_k8s_namespace/tasks/stage_system_data.yml
@@ -18,7 +18,7 @@
            storage: "{{ system_data_item.pvc_size }}"
 
 - set_fact:
-    stage_system_data_items: "{{ lookup('file', stage_system_data_items_path) }}"
+    stage_system_data_items: "{{ lookup('file', system_data_item.dds_files_path) }}"
 
 - name: Create configmap for loading system data volume
   k8s:
