fixes for gcloud k8s roles
Fixes job-manager role to have proper format
Adds gcloud_k8s_host and gcloud_k8s_ca_cert_data output facts
Renames service_account_token to k8s_service_account_token output fact

--- a/bespin_k8s_gcloud_cluster/tasks/get-kubeconfig-credentials.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/get-kubeconfig-credentials.yml
@@ -27,3 +27,16 @@
   command: >
     kubectl get namespaces
     "--kubeconfig={{ kubeconfig_temp_file_path }}"
+
+- name: Fetch details about cluster so we can determine the hostname
+  command: kubectl config view --raw
+  environment:
+    KUBECONFIG: "{{ kubeconfig_temp_file_path }}"
+  register: kubectl_config_raw_result
+
+- set_fact:
+   kubectl_config: "{{ kubectl_config_raw_result.stdout | from_yaml }}"
+
+- set_fact:
+    gcloud_k8s_host: "{{ kubectl_config['clusters'][0]['cluster']['server'] }}"
+    gcloud_k8s_ca_cert_data: "{{ kubectl_config['clusters'][0]['cluster']['certificate-authority-data'] | b64decode }}"
