--- a/bespin_k8s_gcloud_cluster/tasks/get-kubeconfig-credentials.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/get-kubeconfig-credentials.yml
@@ -28,7 +28,7 @@
     kubectl get namespaces
     "--kubeconfig={{ kubeconfig_temp_file_path }}"
 
-- name: Fetch details about cluster so we can determine the hostname
+- name: Fetch details about cluster so we can determine the hostname and ca cert data
   command: kubectl config view --raw
   environment:
     KUBECONFIG: "{{ kubeconfig_temp_file_path }}"
