Use k8s_facts instead of k8s_info
- k8s_info not available until ansible 2.9 (expected release 2019-10-16)

--- a/bespin_k8s_namespace/tasks/cleanup_system_data.yml
+++ b/bespin_k8s_namespace/tasks/cleanup_system_data.yml
@@ -13,7 +13,7 @@
     name: "{{ system_data_item.pvc_name }}"
 
 - name: List any pods created by stage system data job
-  k8s_info:
+  k8s_facts:
     namespace: "{{ namespace_name }}"
     kind: Pod
     label_selectors:
