Add setup_bespin_api variable to optionally skip contacting bespin api with new k8s clusters

--- a/bespin_k8s_gcloud_cluster/defaults/main.yml
+++ b/bespin_k8s_gcloud_cluster/defaults/main.yml
@@ -1,3 +1,4 @@
 large_pool_name: large-machine-pool
 filestore_description: "Bespin-ReadWriteMany-filestore"
 filestore_network_name: "default"
+setup_bespin_api: yes
