--- a/bespin_k8s_gcloud_cluster/tasks/delete_cluster.yml
+++ b/bespin_k8s_gcloud_cluster/tasks/delete_cluster.yml
@@ -1,4 +1,5 @@
 - include: tasks/update_bespin_api_connection.yml
+  when: setup_bespin_api
 - include: tasks/get-kubeconfig-credentials.yml
   when: cluster_exists
 - include_role:
