Set resources as persistentvolumeclaims in role, otherwise GKE doesn't acknowledge it

--- a/bespin_k8s_namespace/files/pvc-manager-role.yml
+++ b/bespin_k8s_namespace/files/pvc-manager-role.yml
@@ -4,5 +4,5 @@ metadata:
   name: pvc-manager-role
 rules:
 - apiGroups: [""]
-  resources: ["pvc"]
+  resources: ["persistentvolumeclaims"]
   verbs: ["create", "delete", "list", "watch"]
