Use gevent workers and disable proxybuffering for all of d4s2 api
- See https://github.com/Duke-GCB/D4S2/issues/222
- Configuration to keep downloads from timing out should help with long running project summary calls too

--- a/d4s2_webapp/files/nginx.conf
+++ b/d4s2_webapp/files/nginx.conf
@@ -34,6 +34,7 @@ http {
       proxy_set_header        X-Real-IP $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
+      proxy_buffering off;  ## Disable proxy buffering for long-running DukeDS API operations
     }
 
     location ~ ^/(download)/ {
@@ -42,7 +43,7 @@ http {
       proxy_set_header        X-Real-IP $remote_addr;
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
-      proxy_buffering off;  ## Disable proxy buffering for downloads
+      proxy_buffering off;  ## Disable proxy buffering for long-running download tasks
     }
   }
 }
