--- a/d4s2_webapp/files/nginx.conf
+++ b/d4s2_webapp/files/nginx.conf
@@ -35,6 +35,11 @@ http {
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
       proxy_buffering off;  ## Disable proxy buffering for long-running DukeDS API operations
+      ## Raise proxy timeouts from default of 300 for long-running DukeDS API operations
+      proxy_connect_timeout 600;
+      proxy_send_timeout 600;
+      proxy_read_timeout 600;
+      send_timeout 600;
     }
 
     location ~ ^/(download)/ {
