Raise timeouts to 30 minutes. getting project summary for 40k files project took 17
Also apply proxy timeouts to download route, since that produced 504s

--- a/d4s2_webapp/files/nginx.conf
+++ b/d4s2_webapp/files/nginx.conf
@@ -36,10 +36,10 @@ http {
       proxy_set_header        X-Forwarded-Proto $scheme;
       proxy_buffering off;  ## Disable proxy buffering for long-running DukeDS API operations
       ## Raise proxy timeouts from default of 300 for long-running DukeDS API operations
-      proxy_connect_timeout 600;
-      proxy_send_timeout 600;
-      proxy_read_timeout 600;
-      send_timeout 600;
+      proxy_connect_timeout 1800;
+      proxy_send_timeout 1800;
+      proxy_read_timeout 1800;
+      send_timeout 1800;
     }
 
     location ~ ^/(download)/ {
@@ -49,6 +49,11 @@ http {
       proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header        X-Forwarded-Proto $scheme;
       proxy_buffering off;  ## Disable proxy buffering for long-running download tasks
+      ## Raise proxy timeouts from default of 300 for downloads that take a long time to start
+      proxy_connect_timeout 1800;
+      proxy_send_timeout 1800;
+      proxy_read_timeout 1800;
+      send_timeout 1800;
     }
   }
 }
